CICD -check, deployment -check, my existance - also check

--- a/research/04_model_evaluation_with_mlflow.ipynb
+++ b/research/04_model_evaluation_with_mlflow.ipynb
@@ -73,7 +73,7 @@
    "source": [
     "os.environ[\"MLFLOW_TRACKING_URI\"]=\"https://dagshub.com/PrathikVijaykumar/Image-classification-Deep-Learning-Project.mlflow\"\n",
     "os.environ[\"MLFLOW_TRACKING_USERNAME\"]=\"PrathikVijaykumar\"\n",
-    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"]=\"Jobs@1234\"\n"
+    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"]=\"XXXXX\"\n"
    ]
   },
   {
@@ -142,7 +142,7 @@
     "    def get_evaluation_config(self) -> EvaluationConfig:\n",
     "        eval_config = EvaluationConfig(\n",
     "            path_of_model=\"artifacts/training/model.h5\",\n",
-    "            training_data=\"artifacts/data_ingestion/kidney_scan_images\",\n",
+    "            training_data=\"artifacts/data_ingestion/kidney_scan_images\", #plant_health_images\n",
     "            mlflow_uri=\"https://dagshub.com/PrathikVijaykumar/Image-classification-Deep-Learning-Project.mlflow\",\n",
     "            all_params=self.params,\n",
     "            params_image_size=self.params.IMAGE_SIZE,\n",
@@ -246,30 +246,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'artifacts_root': 'artifacts', 'data_ingestion': {'root_dir': 'artifacts/data_ingestion', 'source_URL': 's3://image-dataset-mlops/kidney-image/kidney_scan_images.zip', 'local_data_file': 'artifacts/data_ingestion/data.zip', 'unzip_dir': 'artifacts/data_ingestion'}, 'prepare_base_model': {'root_dir': 'artifacts/prepare_base_model', 'base_model_path': 'artifacts/prepare_base_model/base_model.h5', 'updated_base_model_path': 'artifacts/prepare_base_model/base_model_updated.h5'}, 'training': {'root_dir': 'artifacts/training', 'trained_model_path': 'artifacts/training/model.h5'}}\n",
-      "[2024-07-01 01:00:21,535: INFO: common: yaml file: config\\config.yaml loaded successfully {'artifacts_root': 'artifacts', 'data_ingestion': {'root_dir': 'artifacts/data_ingestion', 'source_URL': 's3://image-dataset-mlops/kidney-image/kidney_scan_images.zip', 'local_data_file': 'artifacts/data_ingestion/data.zip', 'unzip_dir': 'artifacts/data_ingestion'}, 'prepare_base_model': {'root_dir': 'artifacts/prepare_base_model', 'base_model_path': 'artifacts/prepare_base_model/base_model.h5', 'updated_base_model_path': 'artifacts/prepare_base_model/base_model_updated.h5'}, 'training': {'root_dir': 'artifacts/training', 'trained_model_path': 'artifacts/training/model.h5'}}]\n",
-      "{'AUGMENTATION': True, 'IMAGE_SIZE': [224, 224, 3], 'BATCH_SIZE': 16, 'INCLUDE_TOP': False, 'EPOCHS': 3, 'CLASSES': 2, 'WEIGHTS': 'imagenet', 'LEARNING_RATE': 0.01}\n",
-      "[2024-07-01 01:00:21,538: INFO: common: yaml file: params.yaml loaded successfully {'AUGMENTATION': True, 'IMAGE_SIZE': [224, 224, 3], 'BATCH_SIZE': 16, 'INCLUDE_TOP': False, 'EPOCHS': 3, 'CLASSES': 2, 'WEIGHTS': 'imagenet', 'LEARNING_RATE': 0.01}]\n",
-      "[2024-07-01 01:00:21,540: INFO: common: created directory at: artifacts]\n",
+      "{'artifacts_root': 'artifacts', 'data_ingestion': {'root_dir': 'artifacts/data_ingestion', 'source_URL': 's3://image-dataset-mlops/plant-image/plant_health_images.zip', 'local_data_file': 'artifacts/data_ingestion/data.zip', 'unzip_dir': 'artifacts/data_ingestion'}, 'prepare_base_model': {'root_dir': 'artifacts/prepare_base_model', 'base_model_path': 'artifacts/prepare_base_model/base_model.h5', 'updated_base_model_path': 'artifacts/prepare_base_model/base_model_updated.h5'}, 'training': {'root_dir': 'artifacts/training', 'trained_model_path': 'artifacts/training/model.h5'}}\n",
+      "[2024-07-02 14:22:18,310: INFO: common: yaml file: config\\config.yaml loaded successfully {'artifacts_root': 'artifacts', 'data_ingestion': {'root_dir': 'artifacts/data_ingestion', 'source_URL': 's3://image-dataset-mlops/plant-image/plant_health_images.zip', 'local_data_file': 'artifacts/data_ingestion/data.zip', 'unzip_dir': 'artifacts/data_ingestion'}, 'prepare_base_model': {'root_dir': 'artifacts/prepare_base_model', 'base_model_path': 'artifacts/prepare_base_model/base_model.h5', 'updated_base_model_path': 'artifacts/prepare_base_model/base_model_updated.h5'}, 'training': {'root_dir': 'artifacts/training', 'trained_model_path': 'artifacts/training/model.h5'}}]\n",
+      "{'AUGMENTATION': True, 'IMAGE_SIZE': [224, 224, 3], 'BATCH_SIZE': 32, 'INCLUDE_TOP': False, 'EPOCHS': 5, 'CLASSES': 2, 'WEIGHTS': 'imagenet', 'LEARNING_RATE': 0.05}\n",
+      "[2024-07-02 14:22:18,311: INFO: common: yaml file: params.yaml loaded successfully {'AUGMENTATION': True, 'IMAGE_SIZE': [224, 224, 3], 'BATCH_SIZE': 32, 'INCLUDE_TOP': False, 'EPOCHS': 5, 'CLASSES': 2, 'WEIGHTS': 'imagenet', 'LEARNING_RATE': 0.05}]\n",
+      "[2024-07-02 14:22:18,314: INFO: common: created directory at: artifacts]\n",
       "Found 150 images belonging to 2 classes.\n",
-      "10/10 [==============================] - 10s 1s/step - loss: 0.4464 - accuracy: 0.9133\n",
-      "[2024-07-01 01:00:32,489: INFO: common: json file saved at: scores.json]\n"
+      "5/5 [==============================] - 10s 2s/step - loss: 52.0630 - accuracy: 0.5000\n",
+      "[2024-07-02 14:22:29,272: INFO: common: json file saved at: scores.json]\n",
+      "[2024-07-02 14:22:29,275: INFO: common: json file saved at: scores.json]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/07/01 01:00:33 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
+      "2024/07/02 14:22:30 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-01 01:00:34,163: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
-      "INFO:tensorflow:Assets written to: C:\\Users\\vprat\\AppData\\Local\\Temp\\tmpcwxplt7g\\model\\data\\model\\assets\n",
-      "[2024-07-01 01:00:34,680: INFO: builder_impl: Assets written to: C:\\Users\\vprat\\AppData\\Local\\Temp\\tmpcwxplt7g\\model\\data\\model\\assets]\n"
+      "[2024-07-02 14:22:31,317: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
+      "INFO:tensorflow:Assets written to: C:\\Users\\vprat\\AppData\\Local\\Temp\\tmpr7x6wxme\\model\\data\\model\\assets\n",
+      "[2024-07-02 14:22:31,877: INFO: builder_impl: Assets written to: C:\\Users\\vprat\\AppData\\Local\\Temp\\tmpr7x6wxme\\model\\data\\model\\assets]\n"
      ]
     },
     {
@@ -279,8 +280,8 @@
       "c:\\Users\\vprat\\Desktop\\portfolio\\Image-classification-Deep-Learning-Project\\deepimage\\lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
       "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
       "Registered model 'VGG16Model' already exists. Creating a new version of this model...\n",
-      "2024/07/01 01:02:35 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 4\n",
-      "Created version '4' of model 'VGG16Model'.\n"
+      "2024/07/02 14:24:37 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 12\n",
+      "Created version '12' of model 'VGG16Model'.\n"
      ]
     }
    ],
@@ -296,6 +297,13 @@
     "except Exception as e:\n",
     "   raise e"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
